# graphql-movies

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
graphqlmovies/: app.py  config.py  db.py  factories.py  models.py  schemas.py
tests/: conftest.py  provider.py  test_app.py
