[metadata]
name = graphqlmovies
author = Carolin Dohmen
summary = GraphQL sample project
description-file = README.md
classifier =
  Environment :: Console
  Intended Audience :: Developers
  Operating System :: POSIX :: Linux
  Operating System :: MacOS :: MacOS X
  Programming Language :: Python :: 3.6

[files]
packages = graphqlmovies
